@@ -9,6 +9,7 @@ python-extension _internet :
         ../../../fost-base/Cpp/fost-core/
         ../../../fost-internet/Cpp/fost-inet/
         ../fost-python/
+        agent.cpp
         internet-py.cpp
         url.cpp
     :
